# PyDSM

./: .dir-locals.el  .gitattributes  .gitignore  .readthedocs.yaml  Introduction.md  LICENSE  MANIFEST.in  ProjectHome.md  README  README.md  README.rst  README_PDM.md  TODO  TODO.md  docdist.py  download.md  main.md  makefile  pyproject.toml  setup.cfg  setup.py  setup_helper_docdist.py  setup_helper_version.py
Documentation/html/: delsig-module.html  genindex.html  getting-started.html  index.html  intro.html  linux-getting-started.html  np-modindex.html  ntf-design-module.html  objects.inv  py-modindex.html  reference.html  replicate-tcas.html  search.html  searchindex.js  simulation-module.html  utility-modules.html  windows-getting-started.html
Examples/ICECS-2012/: demo_filter_motor.py
Examples/ICECS-2013/: demo_dep_osr_hinf.py  dualNTF.py  extract_tone.py  plot_dual_delsig.py  plot_single_delsig.py
Examples/TCAS1-2013/: demo_bp.py  demo_lp.py  demo_multiband.py
Examples/TCAS2-2013/: demo_lp_brickwall.py  demo_lp_filter.py  demo_lp_low_dc_noise.py  demo_multiband_brickwall.py  demo_psychoacoustic.py
cvxpy_tinoco/: __init__.py  arrays.py  constraints.py  defs.py  interface.py  programs.py  scalars.py  utils.py
cvxpy_tinoco/functions/: __init__.py  abs.py  det_rootn.py  exp.py  geo_mean.py  huber.py  kl_div.py  lambda_max.py  lambda_min.py  log.py  log_norm_cdf.py  log_sum_exp.py  max.py  min.py  norm1.py  norm2.py  norm_inf.py  nuclear_norm.py  power_abs.py  power_p.py  power_pos.py  quad_form.py  quad_over_lin.py  sqrt.py  square.py
cvxpy_tinoco/procedures/: __init__.py  call_solver.py  expand.py  re_eval.py  solve_prog.py
cvxpy_tinoco/sets/: __init__.py  exp_cone.py  geo_mean_cone.py  kl_div_epi.py  log_norm_cdf_hypo.py  power_pos_epi.py  second_order_cone.py  semidefinite_cone.py
doc/: Makefile  README  README.md  make.bat  requirements.txt
doc/Figures/: pydsm.logo.odg  pydsm_logo.svgz
doc/Logo/: logo_notes.md  pydsm_logo.odg  pydsm_logo.svgz  pydsm_repo_preview.svgz
doc/source/: .gitattributes  NTFdesign.helpers.rst  README  _links.rst  audio-weightings-module.rst  bibliographic-references.rst  changelog.rst  conf.py  correlations.rst  delsig-module.rst  external-dependencies.rst  getting-started.rst  how-to-reproduce-results.rst  index.rst  (+46 more)
pydsm/: __init__.py  _version.py  audio_weightings.py  correlations.py  errors.py  exceptions.py  ft.py  ir.py  iso226.py  relab.py  simulation.py  utilities.py  version.py
src_templates/: delsig_file.py  gpl_file.py
templates/: delsig_file.py  gpl_file.py
test/: test_NTFdesign.py  test_NTFdesignfromfilter.py  test_all.py  test_dtft.py  test_ir.py  test_pad.py  test_plot.py  test_q0.py  test_simulateDSM.py  test_simulateDSM2.py  test_synthesizeNTF.py
(+209 files in other folders)
