[project]
name = "pydsm"
description = "Python Based Delta-Sigma modulator design tools"
authors = [
    {name = "Sergio Callegari", email = "sergio.callegari@unibo.it"},
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.19",
    "cvxopt",
    "matplotlib>=3.6",
    "scipy>=1.6",
    "scs",
    "cvxpy",
    "picos",
    "pytest>=8.3.2",
    "importlib-resources>=6.4.4",
    "pytest-benchmark>=4.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "delta-sigma",
    "delta-sigma-modulator",
    "sigma-delta",
    "sigma-delta-modulator",
    "ΔΣ",
    "ΔΣM",
    "ΣΔ",
    "ΣΔM",
    "digital-signal-processing",
    "EDA",
    "electronic-design-automation",
    "simulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
"Homepage" = "https://www.pydsm.org/"
"Documentation" = "https://pythonhosted.org/pydsm/"
"Source" = "https://github.com/sergiocallegari/PyDSM"
"Bug Tracker" = "https://github.com/sergiocallegari/PyDSM/issues"
"Changelog" = "https://github.com/sergiocallegari/PyDSM/blob/main/doc/source/changelog.rst"

[dependency-groups]
coverage = ["pytest-cov"]
doc = [
    "sphinx",
    "numpydoc"
]
dev = [
    "spyder-kernels",
]
release = [
    "check-manifest>=0.50",
    "pyroma>=5.0",
    "twine>=6.1.0",
]

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]>=6.0",
    "cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"pydsm.delsig" = [
    "*.c",
    "*.h",
    "*.pyx",
    "*.pxi"
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
version_file = "src/pydsm/_version.py"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
coverage = [
    "pytest-cov",
]

[tool.check-manifest]
ignore = [
    "src/pydsm/_version.py",
    "src/pydsm/delsig/*.c"
]